@@ -3,7 +3,7 @@ package com.faforever.api.security;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.function.Supplier;
 
 @Component
@@ -15,7 +15,7 @@ public class UserSupplier implements Supplier<FafUserDetails> {
     if (principal instanceof FafUserDetails) {
       return (FafUserDetails) principal;
     } else {
-      return new FafUserDetails(-1, principal.toString(), null, false, Collections.emptyList());
+      return new FafUserDetails(-1, principal.toString(), null, false, List.of());
     }
   }
 }
